traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:24: error: Boolean does not take parameters
  else if (!gauche()) {
                  ^